core/core/static/main.css
/* https://fonts.google.com/specimen/Roboto */
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

#banner {
    color: black;
    background-color: #dbcbd8;
    background-image: linear-gradient(300deg, #cbcbdc 0%, #2f5b91 75%);
    height: 650px;
    width: 100%;
    min-width: 500px;
    max-width: 2500px;
    text-align: center; 
    position: relative;
    margin: auto;
    
    /* box-shadow: 0 -25px 35px -25px   rgba(255, 255,255,0.15) inset; */
    /* box-shadow: 0 -5px 5px -5px white inset; */
    /* box-shadow: 0 0 25px 25px white inset; */
    box-shadow: 0 -450px 700px -450px   rgba(255, 255, 255, 0.5) inset;
}
#pfp {
    
    /* margin:auto; */
    height: 500px;
    width: auto;
    border-radius: 100%;   
    box-shadow: -1em 0 4em #2f5b91, -1em 0 4em #cbcbdc;
}

.intro {
    /* The Intro box of me. */
    position: relative; 
    margin: auto;
    top:75px;
    height: 500px;
}

.intro-about-me {
    position: relative;
    text-align: center;
    margin:0;
    padding:0;
    top:25%;
    margin: auto;
    width: 50%;
    padding: 10px;
}

.me-buttons{
    position: inherit;
    top: 100px;
    /* bottom: 0; */
    /* left: 40%; */
}

.about-me {
    position: relative;
    height: 100%;
    max-height: 400px;
    width:100%;
    
    box-shadow: 0 0 1px 1px grey;
}

.glass-bg {
    position: relative;
    top:10%;
    height: 300px;
    color: black;
    background: linear-gradient(135deg, rgba(0, 0, 0, 0.1), rgba(25, 23, 44, 0));
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(20px);
    border-radius: 30px;

}


.skill-section {
    margin-top: 100px;
    height:500px;
}

.skill-section .leftCol {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.skill-section .am-block {
    height: 250px;
    width: 300px;
    margin-left: 100px;
}

body {
    /* background: rgb(255,255,255); */
    font-family: 'Roboto', sans-serif;
    background-color: whitesmoke;
    /* background: radial-gradient(circle, rgba(255,255,255,1) 50%, rgba(204,204,217,1) 100%); */
    /* background: radial-gradient(circle, rgba(24,13,38,1) 50%, rgba(24,13,38,1) 100%); */
    overflow-y: scroll;    
}



.nav {
    height: 5vh;
    box-shadow: 0 4px 20px -20px whitesmoke inset !important;
} 

.bLine {
    padding-bottom: 40px;
    /* border-bottom: 1px solid #565c75; */
}

.notifyBox {
    background-color: rgba(204,204,217,1);
    margin: auto;
    margin-top: 200px;
    width: 50%;
    height: 30%;
    box-shadow: 1px 3px 3px #565c75;
    padding: 50px;
}

.notifyBox > h2 {
    color: #292a30;
}

.bottomBorder {
    position: fixed;
    bottom: 0px;
    height: 50px;
    width: 100%;
    box-shadow:  0 20px 30px -20px whitesmoke inset;
    background-color: #565c75;
}


/* Reconfigure bootstrap */
.btn-secondary {
    width: 40px;
    background-color:orange;
    border-color: orange;
    /* 
    height:45px; */
    text-align: center;
    align-items: center;
    border-radius: 30px;
}

/* Vue stuff */
[v-cloak] {
    display: none;
}

@media (max-width: 992px) { 
    .nav {
        height: 100%;
    }
}

/* For Smaller Screen size logic.*/
@media (max-width: 768px) {

}

